--- a/src/components/main.css
+++ b/src/components/main.css
@@ -75,7 +75,8 @@
 .bg-sbar{
     background-color: #282c34;
     height: 800px;
-    overflow-x: auto;
+    overflow-x: scroll;
+    padding-left: 5px;
 }
 
 .btn-add{
