--- a/src/components/main.css
+++ b/src/components/main.css
@@ -68,8 +68,7 @@
 
 }
 .sidebar-link{
-    /* text-decoration: none; */
-    /* padding-top: 20px; */
+    text-decoration: none;
     color: white;
 }
 .bg-sbar{
